# TerminalMath

./: .gitignore  README.md  main.py  math_generator.py  pyproject.toml
src/: app.py  math_generator.py
